lang/tests/compile_fail/unknown_op_arg.stderr
error: unknown `token(...)` arg `foo`. Valid args: mint, authority, token_program
  --> tests/compile_fail/unknown_op_arg.rs:12:57
   |
12 |     #[account(token(mint = mint, authority = authority, foo = authority))]
   |                                                         ^^^

error[E0432]: unresolved import `quasar_spl`
 --> tests/compile_fail/unknown_op_arg.rs:3:5
  |
3 | use quasar_spl::{TokenProgram, *};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `quasar_spl`
  |
  = help: if you wanted to use a crate named `quasar_spl`, use `cargo add quasar_spl` to add it to your `Cargo.toml`
